syntax = "proto3";

option csharp_namespace = "Autobarn.Pricing";

package price;

// The greeting service definition.
service Pricer {
  // Sends a greeting
  rpc GetPrice (PriceRequest) returns (PriceReply);
}

message PriceRequest {
	string make = 1;
	string model = 2;
	string color = 3;
	int32 year = 4;
}

message PriceReply {
	int32 price = 1;
	string currencyCode = 2;
}


